Working on final project as it's a work in progress.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -65,7 +65,7 @@
             </div>
             <!-- Banner -->
             <div id="banner" class="banner">
-                <span class="close-btn" onclick="closeBanner()">❌</span>
+                <span class="close-button" onclick="closeBanner()">❌</span>
                 <p>Join us for our Chamber of Commerce meet and greet this Wednesday at 7:00 p.m!</p>
             </div>
             <section class="events">
