--- a/scootsrentals/index.html
+++ b/scootsrentals/index.html
@@ -4,11 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>~Scoots~ Home Page</title>
+    <title>~Scoots~ Rentals Home Page</title>
+    <meta name="description" content="~Scoots~ Rentals Home Page, Robert Whisenhunt, scoots rentals">
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
+    <meta property="og:title" content="~Scoots~ Rentals Home Page">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="">
+    <meta property="og:url" content="https://whisenhunt-robert.github.io/wdd230/scootsrentals/index.html">
 </head>
 
 <body>
+    <header>
 
+    </header>
+    <nav>
+
+    </nav>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
