Scoots Project in progress.

--- a/scootsrentals/index.html
+++ b/scootsrentals/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>~Scoots~ Rentals Home Page</title>
-    <meta name="description" content="~Scoots~ Rentals Home Page, Robert Whisenhunt, scoots rentals">
-    <meta name="author" content="">
+    <meta name="description" content="~Scoots~ Rentals Home Page, scoots rentals">
+    <meta name="author" content="Robert Whisenhunt">
+    <link href="styles/base.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="~Scoots~ Rentals Home Page">
     <meta property="og:type" content="website">
@@ -15,17 +16,32 @@
 </head>
 
 <body>
-    <header>
-
+    <header class="header-content">
+        <h1>~Scoots~</h1>
+        <img src="images/scoots-cozumel.jpg" alt="Scoots Cozumel">
+        <h1>Rentals</h1>
+        <hr>
+        <nav class="navigation">
+            <a href="https://whisenhunt-robert.github.io/wdd230/scootsrentals/" class="active">Home</a>
+            <a href="https://whisenhunt-robert.github.io/wdd230/scootsrentals/rentals.html">Rentals</a>
+            <a href="https://whisenhunt-robert.github.io/wdd230/scootsrentals/reservations.html">Reservations</a>
+            <a href="https://whisenhunt-robert.github.io/wdd230/scootsrentals/contact.html">Contact</a>
+        </nav>
     </header>
-    <nav>
 
-    </nav>
     <main>
-
+        <section>
+            <p>Types of Rentals</p>
+        </section>
+        <section>
+            <p>Social Media</p>
+        </section>
+        <section>
+            <p>Weather</p>
+        </section>
     </main>
-    <footer>
-
+    <footer class="footer-content">
+        <h2>Robert Whisenhunt</h2>
     </footer>
 </body>
 
