Testing JSON file for the rentals page.

--- a/scootsrentals/rentals.html
+++ b/scootsrentals/rentals.html
@@ -30,19 +30,28 @@
     </header>
 
     <main>
-        <section>
-            <p>Types of Rentals</p>
-        </section>
-        <section>
-            <p>Social Media</p>
-        </section>
-        <section>
-            <p>Weather</p>
-        </section>
+        <h2>Scooter Rental Pricing</h2>
+
+        <table id="rentalTable">
+            <thead>
+                <tr>
+                    <th>Rental Type</th>
+                    <th>Max Persons</th>
+                    <th>Half Day (3 hours) Reservation</th>
+                    <th>Full Day Reservation</th>
+                    <th>Half Day (3 hours) Walk-in</th>
+                    <th>Full Day Walk-in</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Table body will be populated dynamically by JavaScript -->
+            </tbody>
+        </table>
     </main>
     <footer class="footer-content">
         <h2>Robert Whisenhunt</h2>
     </footer>
+    <script src="scripts/prices.js"></script>
 </body>
 
 </html>
