--- a/scootsrentals/rentals.html
+++ b/scootsrentals/rentals.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Robert Whisenhunt">
     <link href="styles/base.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
-    <meta property="og:title" content="~Scoots~ Rentals Home Page">
+    <meta property="og:title" content="~Scoots~ Rentals - Rentals Page">
     <meta property="og:type" content="website">
     <meta property="og:image" content="">
     <meta property="og:url" content="https://whisenhunt-robert.github.io/wdd230/scootsrentals/rentals.html">
@@ -29,9 +29,9 @@
         </nav>
     </header>
 
-    <main>
-        <h2>Scooter Rental Pricing</h2>
-
+    <main id="rentalPage">
+        <h2>Max Rental Pricing</h2>
+        <hr>
         <table id="rentalTable">
             <thead>
                 <tr>
@@ -51,7 +51,7 @@
     <footer class="footer-content">
         <h2>Robert Whisenhunt</h2>
     </footer>
-    <script src="scripts/prices.js"></script>
+    <script src="../scootsrentals/scripts/prices.js"></script>
 </body>
 
 </html>
