Scoots page work in progress.

--- a/scootsrentals/index.html
+++ b/scootsrentals/index.html
@@ -7,7 +7,9 @@
     <title>~Scoots~ Rentals Home Page</title>
     <meta name="description" content="~Scoots~ Rentals Home Page, scoots rentals">
     <meta name="author" content="Robert Whisenhunt">
+    <link href="styles/normalize.css" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
+    <link href="styles/large.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="~Scoots~ Rentals Home Page">
     <meta property="og:type" content="website">
@@ -17,9 +19,8 @@
 
 <body>
     <header class="header-content">
-        <h1>~Scoots~</h1>
+        <h1>~Scoots~ Rentals</h1>
         <img src="images/scoots-cozumel.jpg" alt="Scoots Cozumel">
-        <h1>Rentals</h1>
         <hr>
         <nav class="navigation">
             <a href="https://whisenhunt-robert.github.io/wdd230/scootsrentals/" class="active">Home</a>
@@ -31,13 +32,28 @@
 
     <main>
         <section>
-            <p>Types of Rentals</p>
+            <h2>Types of Rentals</h2>
+            <p>Honda Motor Scooters</p>
+            <ul>
+                <li>Honda Metropolitan (49cc) - 1 person</li>
+                <li>Honda Dio (110cc) - 2 person</li>
+                <li>Honda PC150 (149cc) - 2 person</li>
+            </ul>
+            <p>Side-by-Side ATVs</p>
+            <ul>
+                <li>Honda Pioneer 1000 - 4 person</li>
+            </ul>
+            <p>Jeeps</p>
+            <ul>
+                <li>Jeep Wrangler - 4 door manuel with A/C - 5 person</li>
+                <li>Jeep Wrangler - 2 door - open air - manuel - 4 person</li>
+            </ul>
         </section>
         <section>
-            <p>Social Media</p>
+            <h2>Social Media</h2>
         </section>
         <section>
-            <p>Weather</p>
+            <h2>Weather</h2>
         </section>
     </main>
     <footer class="footer-content">
