--- a/scootsrentals/rentals.html
+++ b/scootsrentals/rentals.html
@@ -7,7 +7,9 @@
     <title>~Scoots~ Rentals - Rentals Page</title>
     <meta name="description" content="~Scoots~ Rentals - Rentals Page, scoots rentals">
     <meta name="author" content="Robert Whisenhunt">
+    <link href="styles/normalize.css" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
+    <link href="styles/large.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="~Scoots~ Rentals - Rentals Page">
     <meta property="og:type" content="website">
@@ -17,9 +19,8 @@
 
 <body>
     <header class="header-content">
-        <h1>~Scoots~</h1>
+        <h1>~Scoots~ Rentals</h1>
         <img src="images/scoots-cozumel.jpg" alt="Scoots Cozumel">
-        <h1>Rentals</h1>
         <hr>
         <nav class="navigation">
             <a href="https://whisenhunt-robert.github.io/wdd230/scootsrentals/">Home</a>
