--- a/scootsrentals/index.html
+++ b/scootsrentals/index.html
@@ -13,7 +13,8 @@
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="~Scoots~ Rentals Home Page">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="">
+    <meta property="og:image"
+        content="https://www.worldatlas.com/r/w1300/upload/e4/1e/ed/cozumel-mexico-timothy-l-barnes.jpg">
     <meta property="og:url" content="https://whisenhunt-robert.github.io/wdd230/scootsrentals/index.html">
 </head>
 
@@ -73,9 +74,11 @@
     </main>
     <footer class="footer-content">
         <h3>Robert Whisenhunt</h3>
+        <p>&copy;<span id="currentYear"></span> ~Scoots~ Rentals</p>
     </footer>
     <script src="../scootsrentals/scripts/weather.js"></script>
     <script src="../scootsrentals/scripts/weather-banner.js"></script>
+    <script src="../scootsrentals/scripts/getdates.js"></script>
 </body>
 
 </html>
