--- a/scootsrentals/rentals.html
+++ b/scootsrentals/rentals.html
@@ -7,13 +7,14 @@
     <title>~Scoots~ Rentals - Rentals Page</title>
     <meta name="description" content="~Scoots~ Rentals - Rentals Page, scoots rentals">
     <meta name="author" content="Robert Whisenhunt">
-    <link href="styles/normalize.css" rel="stylesheet">
-    <link href="styles/base.css" rel="stylesheet">
-    <link href="styles/large.css" rel="stylesheet">
+    <link href="../scootsrentals/styles/normalize.css" rel="stylesheet">
+    <link href="../scootsrentals/styles/base.css" rel="stylesheet">
+    <link href="../scootsrentals/styles/large.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="~Scoots~ Rentals - Rentals Page">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="">
+    <meta property="og:image"
+        content="https://www.worldatlas.com/r/w1300/upload/e4/1e/ed/cozumel-mexico-timothy-l-barnes.jpg">
     <meta property="og:url" content="https://whisenhunt-robert.github.io/wdd230/scootsrentals/rentals.html">
 </head>
 
