--- a/scootsrentals/contact.html
+++ b/scootsrentals/contact.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>~Scoots~ Rentals Home Page</title>
-    <meta name="description" content="~Scoots~ Rentals Home Page, scoots rentals">
+    <title>~Scoots~ Rentals Contact Page</title>
+    <meta name="description" content="~Scoots~ Rentals Contact Page, scoots rentals">
     <meta name="author" content="Robert Whisenhunt">
-    <link href="styles/normalize.css" rel="stylesheet">
-    <link href="styles/base.css" rel="stylesheet">
-    <link href="styles/large.css" rel="stylesheet">
+    <link href="../scootsrentals/styles/normalize.css" rel="stylesheet">
+    <link href="../scootsrentals/styles/base.css" rel="stylesheet">
+    <link href="../scootsrentals/styles/large.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
-    <meta property="og:title" content="~Scoots~ Rentals Home Page">
+    <meta property="og:title" content="~Scoots~ Rentals Contact Page">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="">
-    <meta property="og:url" content="https://whisenhunt-robert.github.io/wdd230/scootsrentals/index.html">
+    <meta property="og:image"
+        content="https://www.worldatlas.com/r/w1300/upload/e4/1e/ed/cozumel-mexico-timothy-l-barnes.jpg">
+    <meta property="og:url" content="https://whisenhunt-robert.github.io/wdd230/scootsrentals/contact.html">
 </head>
 
 <body>
