--- a/scootsrentals/rentals.html
+++ b/scootsrentals/rentals.html
@@ -51,9 +51,12 @@
         </table>
     </main>
     <footer class="footer-content">
-        <h2>Robert Whisenhunt</h2>
+        <h3>Robert Whisenhunt</h3>
+        <p>&copy;<span id="currentYear"></span> ~Scoots~ Rentals</p>
     </footer>
-    <script src="../scootsrentals/scripts/prices.js"></script>
+    <script src="../scootsrentals/scripts/weather.js"></script>
+    <script src="../scootsrentals/scripts/weather-banner.js"></script>
+    <script src="../scootsrentals/scripts/getdates.js"></script>
 </body>
 
 </html>
