--- a/scootsrentals/thankyou.html
+++ b/scootsrentals/thankyou.html
@@ -38,7 +38,11 @@
     </main>
     <footer class="footer-content">
         <h3>Robert Whisenhunt</h3>
+        <p>&copy;<span id="currentYear"></span> ~Scoots~ Rentals</p>
     </footer>
+    <script src="../scootsrentals/scripts/weather.js"></script>
+    <script src="../scootsrentals/scripts/weather-banner.js"></script>
+    <script src="../scootsrentals/scripts/getdates.js"></script>
 </body>
 
 </html>
