--- a/scootsrentals/index.html
+++ b/scootsrentals/index.html
@@ -25,7 +25,7 @@
     </div>
     <header class="header-content">
         <h1>~Scoots~ Rentals</h1>
-        <img src="images/scoots-cozumel.jpg" alt="Scoots Cozumel">
+        <img src="images/scoots-cozumel.webp" alt="Scoots Cozumel">
         <hr>
         <nav class="navigation">
             <a href="https://whisenhunt-robert.github.io/wdd230/scootsrentals/" class="active">Home</a>
@@ -62,7 +62,7 @@
                 <h2>Social Media</h2>
                 <div class="social-icon">
                     <a href="https://www.facebook.com/pages/Cozumel-MX/143660165736320" target="_blank"><img
-                            src="images/facebook-icon.png" alt="Facebook"></a>
+                            src="images/facebook-icon.webp" alt="Facebook"></a>
                 </div>
             </section>
             <section class="weather-section">
