--- a/scootsrentals/rentals.html
+++ b/scootsrentals/rentals.html
@@ -21,7 +21,7 @@
 <body>
     <header class="header-content">
         <h1>~Scoots~ Rentals</h1>
-        <img src="images/scoots-cozumel.jpg" alt="Scoots Cozumel">
+        <img src="images/scoots-cozumel.webp" alt="Scoots Cozumel">
         <hr>
         <nav class="navigation">
             <a href="https://whisenhunt-robert.github.io/wdd230/scootsrentals/">Home</a>
