Fixed the table on the rentals page.

--- a/scootsrentals/rentals.html
+++ b/scootsrentals/rentals.html
@@ -57,6 +57,7 @@
     <script src="../scootsrentals/scripts/weather.js"></script>
     <script src="../scootsrentals/scripts/weather-banner.js"></script>
     <script src="../scootsrentals/scripts/getdates.js"></script>
+    <script src="../scootsrentals/scripts/prices.js"></script>
 </body>
 
 </html>
