--- a/scootsrentals/contact.html
+++ b/scootsrentals/contact.html
@@ -37,7 +37,7 @@
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d239293.76244058926!2d-87.0284159!3d20.4255199!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4ef8efb0d19327%3A0x342ebcae5c018bfc!2sCozumel!5e0!3m2!1sen!2sus!4v1712785214647!5m2!1sen!2sus"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade" title="scootsmap"></iframe>
-        <form method="get" action="thankyou.html" class="contactForm">
+        <form method="get" action="contactthankyou.html" class="contactForm">
             <label for="firstName" title="Please enter your first name.">
                 *First Name:
                 <input type="text" id="firstName" name="firstname" required>
@@ -56,8 +56,6 @@
             <textarea title="Please type any additional comments." id="contactComment" name="contactcomment" rows="4"
                 cols="41" placeholder="Please type any additional comments.">
                     </textarea>
-            <!-- Hidden input for current date/time -->
-            <input type="hidden" name="formLoadTime" id="formLoadTime">
             <input type="submit" value="Send Application" class="submitButton">
         </form>
     </main>
